--- a/header.html
+++ b/header.html
@@ -47,7 +47,7 @@ function init() {
 
 	}
 	menuClick(); //starts onclick listening
-	window.onresize = screenSizeCheck; //runs a screen size check when window is resized
+	// window.onresize = screenSizeCheck; //runs a screen size check when window is resized
 
 }; //end of function init
 
