added slider script to index.html

--- a/index.html
+++ b/index.html
@@ -120,6 +120,28 @@
 	</div>
 
 <!-- FOOTER ENDS -->
+<script>
+	function init() {
+// Start Mobile Hero Image Slider
+     var imageTotal = 0;
+     imageSlider();
 
+     function imageSlider() {
+       var images = document.getElementsByClassName("hero-image__mobile--slider");
+       for (var i = 0; i < images.length; i++) {
+         images[i].style.display = "none";
+       }
+      imageTotal++;
+      if (imageTotal > images.length) { imageTotal = 1
+      }
+      images[imageTotal - 1].style.display = "block";
+      setTimeout (imageSlider, 2000);
+     }
+// End Mobile Hero Image Slider
+
+  };
+
+  window.onload = init;
+  </script>
 </body>
 </html>
