moved footer outside of hero card

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </h1>
 <a href="" class="button button--skew button--hoverstraight"><div class="button--inverseskew button--hoverstraight">View Event Details</div></a>
 <img class="hero-image__desktop" src="src/img/mobile-hero/desktop-hero-01.png" alt="Group illustration." />
-
+</div>
 <main>
 
 
