--- a/cards.html
+++ b/cards.html
@@ -8,13 +8,13 @@
     <title>card module demo</title>
 </head>
 <body>
-    <section class="content-block content-block--narrow">
+    <section class="content-block content-block--wide">
     <div class="card card--yellow">
 
 		<a><img src="src/img/Web_Portfolio_1200px_RGB.jpg"></a>
         <h1>PORTFOLIO</h1>
        <p class="card__description">
-        Discover Us!  
+        Discover Us!
        </p>
        <div class="cards-button">
         <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
@@ -37,7 +37,7 @@
 			<a><img src="#"></a>
             <h1>DSCVR</h1>
            <p class="card__description">
-            Discover us at the NIC Workforce Training Center while our Graphic Design graduates showcase their top work. 
+            Discover us at the NIC Workforce Training Center while our Graphic Design graduates showcase their top work.
            </p>
            <div class="cards-button">
            <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--blue"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
@@ -53,7 +53,7 @@
            </p>
            <a><img src="/src/img/portfolio/web-illustrations170x170-suelyn.png"></a>
            <p class="card__description">
-            “The start is not nearly as important as the finish.” – the Last Holiday 
+            “The start is not nearly as important as the finish.” – the Last Holiday
             </p>
 
            <div class="portfolio_pieces">
