added cards component to index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,42 @@
 <img class="hero-image__desktop" src="src/img/mobile-hero/desktop-hero-01.png" alt="Group illustration." />
 </div>
 <main>
+	<section class="content-block content-block--wide">
+	<div class="card card--yellow">
 
+		<a><img src="src/img/Web_Portfolio_1200px_RGB.jpg"></a>
+		<h1>PORTFOLIO</h1>
+	   <p class="card__description">
+		Discover Us!
+	   </p>
+	   <div class="cards-button">
+		<a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+	 </div>
+	</div>
+	<div class="card card--pink">
+
+		<a><img src="#"></a>
+			<h1>PHOTOBOOTH</h1>
+		   <p class="card__description">
+			   Join The Fun!
+		   </p>
+		   <div class="cards-button">
+			<a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--red"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+		 </div>
+		</div>
+
+		<div class="card card--blue">
+
+			<a><img src="#"></a>
+			<h1>DSCVR</h1>
+		   <p class="card__description">
+			Discover us at the NIC Workforce Training Center while our Graphic Design graduates showcase their top work.
+		   </p>
+		   <div class="cards-button">
+		   <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--blue"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+		</div>
+		</div>
+	</section>
 
 </main>
 
