--- a/cards.html
+++ b/cards.html
@@ -11,30 +11,26 @@
     <section class="content-block content-block--wide">
     <div class="card card--yellow">
 
-		<a><img src="src/img/Web_Portfolio_1200px_RGB.jpg"></a>
+		<a><img src="src/img/main-img-assets/Web_Portfolio_1200px_RGB.jpg"></a>
         <h1>PORTFOLIO</h1>
-       <p class="card__description">
-        Discover Us!
-       </p>
+      
        <div class="cards-button">
-        <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+        <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">Discover Us</div></a>
      </div>
     </div>
     <div class="card card--pink">
 
 		<a><img src="#"></a>
             <h1>PHOTOBOOTH</h1>
-           <p class="card__description">
-               Join The Fun!
-           </p>
+          
            <div class="cards-button">
-            <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--red"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+            <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--red"><div class="button--inverseskew button--hoverstraight">Join The Fun</div></a>
          </div>
         </div>
 
         <div class="card card--blue">
 
-			<a><img src="#"></a>
+			<a><img src="src/img/main-img-assets/dscvr_web_event.png"></a>
             <h1>DSCVR</h1>
            <p class="card__description">
             Discover us at the NIC Workforce Training Center while our Graphic Design graduates showcase their top work.
@@ -45,28 +41,7 @@
         </div>
     </section>
 
-    <section class="content-block">
-        <div class="card card--yellow">
-
-            <h1>Suelynn Parker</h1>
-           <p class="card__description">
-           </p>
-           <a><img src="/src/img/portfolio/web-illustrations170x170-suelyn.png"></a>
-           <p class="card__description">
-            “The start is not nearly as important as the finish.” – the Last Holiday
-            </p>
-
-           <div class="portfolio_pieces">
-
-            <img src="/src/img/suelynn-parker/Estate MagAd.jpg">
-            <img src="/src/img/suelynn-parker/TetTrungThu.jpg">
-            <img src="/src/img/suelynn-parker/Vizzcom.jpg">
-
-
-           </div>
-        </div>
-
-        </section>
+  
 
 </body>
 </html>
