Portfolio card styling
More styling of the portfolio card layout

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -18,17 +18,36 @@
     <div class="card">
 	<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
         <h1>PORTFOLIO</h1>
-       <p class="student-name">
+       <h2>
         Lydia Ramus
-       </p>
+      </h2>
        <div class="cards-button">
         <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+
      </div>
     </div>
   </div>
     <!-- first card ends  -->
     <!-- second card starts  -->
     <div class="wrapper--alignright">
+
+      <div class="portfolio-content__wrapper">
+        <div class="social-wrapper">
+        <p class="student-name">Tin Fish Design</p>
+          <span><i class="fab fa-2x fa-facebook"></i></span>
+          <span><i class="fab fa-2x fa-instagram"></i></span>
+        </div>
+
+        <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+        <ul class="portfolio-content">
+          <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." />></li>
+          <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+          <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+        </ul>
+
+      </div>
+
     <div class="card">
     <a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
           <h1>PORTFOLIO</h1>
@@ -38,7 +57,11 @@
          <div class="cards-button">
           <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
        </div>
+
+
       </div>
+
+
     </div>
       <!-- second card ends  -->
 
