Small tweaks on layout

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -21,10 +21,6 @@
        <h2>
         Lydia Ramus
       </h2>
-       <div class="cards-button">
-        <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
-
-     </div>
     </div>
   </div>
     <!-- first card ends  -->
@@ -41,7 +37,7 @@
         <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
         <ul class="portfolio-content">
-          <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." />></li>
+          <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
           <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
           <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
         </ul>
@@ -51,14 +47,9 @@
     <div class="card">
     <a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
           <h1>PORTFOLIO</h1>
-         <p class="student-name">
+         <h2>
            Emma Castleberry
-         </p>
-         <div class="cards-button">
-          <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
-       </div>
-
-
+         </h2>
       </div>
 
 
