--- a/button.html
+++ b/button.html
@@ -75,84 +75,13 @@
 <!-- HERO BEGINS -->
 
 <main>
-
-<div id="top" class="button__container button__container1">
-  <!-- BUTTON BASE -->
-  <a href="" class="button button__nocolor">View Event</a>
-  <a href="" class="button button__nocolor">View Event</a>
-  <a href="" class="button button__nocolor">View Event</a>
-
-
-</div>
-<!-- Yellow background -->
-<div class="button__container button__container2">
-  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><div class="button--inverseskew">View Portfolio</div></a>
-  <a href="" class="button button__nocolor button--skew button__nocolor--yellow"><div class="button--inverseskew">View Portfolio</div></a>
-  <a href="" class="button button__nocolor button--skew button__nocolor--yellow">
-    <div class="button--inverseskew">View Portfolio</div></a>
-
-</div>
-<!-- Blue background -->
-<div class="button__container button__container3">
-
-<a href="" class="button button__nocolor button--skew button__nocolor--blue"><div class="button--inverseskew">View Portfolio</div></a>
-
-<a href="" class="button button__nocolor button__nocolor--blue">View Event</a>
-
-</div>
-
 <!-- Green background -->
 <div class="button__container button__container4">
 
-  <a href="" class="button button__nocolor button--skew button__nocolor--green"><div class="button--inverseskew">View
-  Event</div></a>
+  <a href="" class="button button__nocolor button__nocolor--green">No Skew Button</a>
 
-  <a href="" class="button button__nocolor button__nocolor--green">View Event</a>
-
-  <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--green"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
-
-  <a href="" class="button button__nocolor button__nocolor--green button--hoverskew"><div class="button--hoverinversetextskew">View Event</div></a>
+  <a href="" class="button button__nocolor button__nocolor--green button--hoverinverseskew"><div class="button--hoverinversetextskew">Straight to Skew (right)</div></a>
 
 </div>
-
-<!-- White background -->
-<div class="button__container button__container5">
-
-<a href="" class="button">View Event</a>
-<a href="" class="button button--ver2">View Event</a>
-
-<a href="" class="button button--skew button--hoverstraight"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
-</div>
-</main>
-
-<!-- SOCIAL MEDIA FEED BEGINS -->
-
-<!-- SOCIAL MEDIA FEED ENDS -->
-
-<!-- CONTACT FORM BEGINS-->
-<form>
-
-
-</form>
-
-<!-- CONTACT FORM ENDS -->
-
-<!-- PHOTO GALLERY BEGINS -->
-
-<figcaption>
-
-
-</figcaption>
-
-<!-- PHOTO GALLERY ENDS -->
-
-<!-- FOOTER BEGINS -->
-
-<footer>
-
-</footer>
-
-<!-- FOOTER ENDS -->
-
 </body>
 </html>
