Adding all portfolio content
Populating the html with all of the portfolio cards

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -8,23 +8,43 @@
     <title>portfolio card module demo</title>
 </head>
 <body>
+  <h1>PORTFOLIO</h1>
   <!-- overall container encompassing all cards  -->
   <section class="portfolio-card__container">
-<div class="wrapper">
-  <!-- first card starts  -->
-  <!-- the wrapper only wraps individual cards  -->
+<!-- .wrapper is sub-container that emcompasses all cards  -->
+<div class="portfolio-wrapper">
 
+
+<!-- Lydia's card start -->
     <div class="wrapper--alignleft">
-    <div class="card">
-	<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
-        <h1>PORTFOLIO</h1>
+      <div class="card">
+	        <a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+
        <h2>
         Lydia Ramus
       </h2>
-    </div>
+      </div>
+
+      <div class="portfolio-content__wrapper">
+      <div class="social-wrapper">
+      <p class="student-name">Tin Fish Design</p>
+        <span><i class="fab fa-2x fa-facebook"></i></span>
+        <span><i class="fab fa-2x fa-instagram"></i></span>
+      </div>
+
+      <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+        <ul class="portfolio-content">
+          <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+          <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+          <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+        </ul>
+
+      </div>
   </div>
-    <!-- first card ends  -->
-    <!-- second card starts  -->
+    <!-- Lydia's card ends  -->
+
+    <!-- Emma's card starts  -->
     <div class="wrapper--alignright">
 
       <div class="portfolio-content__wrapper">
@@ -46,7 +66,7 @@
 
     <div class="card">
     <a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
-          <h1>PORTFOLIO</h1>
+
          <h2>
            Emma Castleberry
          </h2>
@@ -54,7 +74,339 @@
 
 
     </div>
-      <!-- second card ends  -->
+      <!-- Emma's card ends  -->
+
+      <!-- Joe's card start -->
+<div class="wrapper--alignleft">
+  <div class="card">
+    <a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+
+<h2>
+Joe Click
+</h2>
+  </div>
+
+<div class="portfolio-content__wrapper">
+<div class="social-wrapper">
+<p class="student-name">Tin Fish Design</p>
+<span><i class="fab fa-2x fa-facebook"></i></span>
+<span><i class="fab fa-2x fa-instagram"></i></span>
+</div>
+
+<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+<ul class="portfolio-content">
+<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+</ul>
+
+</div>
+</div>
+<!-- Joe's card ends  -->
+
+<!-- Danielle's card starts  -->
+<div class="wrapper--alignright">
+
+<div class="portfolio-content__wrapper">
+<div class="social-wrapper">
+<p class="student-name">Tin Fish Design</p>
+<span><i class="fab fa-2x fa-facebook"></i></span>
+<span><i class="fab fa-2x fa-instagram"></i></span>
+</div>
+
+<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+<ul class="portfolio-content">
+<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+</ul>
+
+</div>
+
+<div class="card">
+<a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+
+<h2>
+Danielle Prochaska
+</h2>
+</div>
+
+
+</div>
+<!-- Danielle's card ends  -->
+
+<!-- Karey's card start -->
+<div class="wrapper--alignleft">
+<div class="card">
+<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+
+<h2>
+Karey Stivers
+</h2>
+</div>
+
+<div class="portfolio-content__wrapper">
+<div class="social-wrapper">
+<p class="student-name">Tin Fish Design</p>
+<span><i class="fab fa-2x fa-facebook"></i></span>
+<span><i class="fab fa-2x fa-instagram"></i></span>
+</div>
+
+<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+<ul class="portfolio-content">
+<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+</ul>
+
+</div>
+</div>
+<!-- Karey's card ends  -->
+
+<!-- Kennedy's card starts  -->
+<div class="wrapper--alignright">
+
+<div class="portfolio-content__wrapper">
+<div class="social-wrapper">
+<p class="student-name">Tin Fish Design</p>
+<span><i class="fab fa-2x fa-facebook"></i></span>
+<span><i class="fab fa-2x fa-instagram"></i></span>
+</div>
+
+<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+<ul class="portfolio-content">
+<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+</ul>
+
+</div>
+
+<div class="card">
+<a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+
+<h2>
+Kennedy Pew
+</h2>
+</div>
+
+
+</div>
+<!-- Kennedy's card ends  -->
+
+<!-- Suelynn's card start -->
+<div class="wrapper--alignleft">
+<div class="card">
+<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+
+<h2>
+Suelynn Parker
+</h2>
+</div>
+
+<div class="portfolio-content__wrapper">
+<div class="social-wrapper">
+<p class="student-name">Tin Fish Design</p>
+<span><i class="fab fa-2x fa-facebook"></i></span>
+<span><i class="fab fa-2x fa-instagram"></i></span>
+</div>
+
+<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+<ul class="portfolio-content">
+<li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+<li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+<li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+</ul>
+
+</div>
+</div>
+<!-- Suelynn's card ends  -->
+
+<!-- Mattea's card starts  -->
+<div class="wrapper--alignright">
+
+<div class="portfolio-content__wrapper">
+<div class="social-wrapper">
+<p class="student-name">Tin Fish Design</p>
+  <span><i class="fab fa-2x fa-facebook"></i></span>
+  <span><i class="fab fa-2x fa-instagram"></i></span>
+</div>
+
+<p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+<ul class="portfolio-content">
+  <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+  <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+  <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+</ul>
+
+</div>
+
+<div class="card">
+<a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+ <h2>
+   Mattea Bergland
+ </h2>
+</div>
+
+
+</div>
+<!-- Mattea's card ends  -->
+
+<!-- Sam's card start -->
+  <div class="wrapper--alignleft">
+  <div class="card">
+<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+
+     <h2>
+      Sam Stoke
+    </h2>
+  </div>
+
+  <div class="portfolio-content__wrapper">
+    <div class="social-wrapper">
+    <p class="student-name">Tin Fish Design</p>
+      <span><i class="fab fa-2x fa-facebook"></i></span>
+      <span><i class="fab fa-2x fa-instagram"></i></span>
+    </div>
+
+    <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+    <ul class="portfolio-content">
+      <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+      <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+      <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+    </ul>
+
+  </div>
+</div>
+  <!-- Sam's card ends  -->
+
+  <!-- Kallie's card starts  -->
+  <div class="wrapper--alignright">
+
+    <div class="portfolio-content__wrapper">
+      <div class="social-wrapper">
+      <p class="student-name">Tin Fish Design</p>
+        <span><i class="fab fa-2x fa-facebook"></i></span>
+        <span><i class="fab fa-2x fa-instagram"></i></span>
+      </div>
+
+      <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+      <ul class="portfolio-content">
+        <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+        <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+        <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+      </ul>
+
+    </div>
+
+  <div class="card">
+  <a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+
+       <h2>
+         Kallie Khademi
+       </h2>
+    </div>
+
+
+  </div>
+    <!-- Kallie's card ends  -->
+    <!-- Andre's card start -->
+        <div class="wrapper--alignleft">
+        <div class="card">
+    	<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+           <h2>
+            Andre Clark
+          </h2>
+        </div>
+
+        <div class="portfolio-content__wrapper">
+          <div class="social-wrapper">
+          <p class="student-name">Tin Fish Design</p>
+            <span><i class="fab fa-2x fa-facebook"></i></span>
+            <span><i class="fab fa-2x fa-instagram"></i></span>
+          </div>
+
+          <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+          <ul class="portfolio-content">
+            <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+            <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+            <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+          </ul>
+
+        </div>
+      </div>
+        <!-- Andre's card ends  -->
+
+        <!-- Jonah's card starts  -->
+        <div class="wrapper--alignright">
+
+          <div class="portfolio-content__wrapper">
+            <div class="social-wrapper">
+            <p class="student-name">Tin Fish Design</p>
+              <span><i class="fab fa-2x fa-facebook"></i></span>
+              <span><i class="fab fa-2x fa-instagram"></i></span>
+            </div>
+
+            <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+            <ul class="portfolio-content">
+              <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+              <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+              <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+            </ul>
+
+          </div>
+
+        <div class="card">
+        <a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+
+             <h2>
+               Jonah Leeder
+             </h2>
+          </div>
+
+
+        </div>
+    <!-- Jonah's card ends  -->
+
+    <!-- Rachel's card start -->
+        <div class="wrapper--alignleft">
+        <div class="card">
+    	<a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+            <h1>PORTFOLIO</h1>
+           <h2>
+            Rachel Adair
+          </h2>
+        </div>
+
+        <div class="portfolio-content__wrapper">
+          <div class="social-wrapper">
+          <p class="student-name">Tin Fish Design</p>
+            <span><i class="fab fa-2x fa-facebook"></i></span>
+            <span><i class="fab fa-2x fa-instagram"></i></span>
+          </div>
+
+          <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
+
+          <ul class="portfolio-content">
+            <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+            <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+            <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+          </ul>
+
+        </div>
+      </div>
+        <!-- Rachel's card ends  -->
+
 
 </div>
   </section>
