--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -18,13 +18,13 @@
 <!-- Lydia's card start -->
     <div class="wrapper--alignleft">
       <div class="card">
-	        <a><img src="./src/img/portfolio/web-illustration-large-lydia.png"></a>
+	        <a><img src="dist/img/portfolio/web-illustration-large-lydia.png"></a>
 
        <h2>
         Lydia Ramus
       </h2>
       </div>
-    
+
 
       <div class="portfolio-content__wrapper">
       <div class="social-wrapper">
@@ -36,9 +36,9 @@
       <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
         <ul class="portfolio-content">
-          <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-          <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-          <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+          <li><img src="dist/img/portfolio/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+          <li><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+          <li><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
         </ul>
 
       </div>
@@ -58,15 +58,15 @@
         <p>Lorem ipsum dolor amet cornhole franzen venmo migas pour-over pop-up waistcoat! Cronut marfa sartorial chambray hashtag everyday carry keffiyeh.</p>
 
         <ul class="portfolio-content">
-          <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-          <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-          <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+          <li><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+          <li><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+          <li><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
         </ul>
 
       </div>
 
     <div class="card">
-    <a><img src="./src/img/portfolio/web-illustration-large-emma.png"></a>
+    <a><img src="dist/img/portfolio/web-illustration-large-emma.png"></a>
 
          <h2>
            Emma Castleberry
